force-app/main/default/objects/Product2/fields/Apttus_Config2__Customizable__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Customizable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product must be configured during selection.</description>
    <label>Must Configure</label>
    <type>Checkbox</type>
</CustomField>