force-app/main/default/objects/Product2/fields/Apttus_Config2__DiscontinuedDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DiscontinuedDate__c</fullName>
    <description>The date when the product is pulled out and rendered unavailable for sale on the store</description>
    <inlineHelpText>The date when the product is pulled out and rendered unavailable for sale on the store</inlineHelpText>
    <label>Discontinued Date</label>
    <type>Date</type>
</CustomField>