force-app/main/default/objects/Product2/fields/Apttus_Config2__EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__EffectiveDate__c</fullName>
    <description>The product effective date. The product becomes available for selection on this date and time.</description>
    <label>Effective Date</label>
    <type>DateTime</type>
</CustomField>