force-app/main/default/objects/Product2/fields/Apttus_Config2__ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ExpirationDate__c</fullName>
    <description>The product expiration date. The product is unavailable for selection after this date and time.</description>
    <label>Expiration Date</label>
    <type>DateTime</type>
</CustomField>