force-app/main/default/objects/Product2/fields/Apttus_Config2__HasAttributes__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HasAttributes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the product has attributes.</description>
    <label>Has Attributes</label>
    <type>Checkbox</type>
</CustomField>