force-app/main/default/objects/Product2/fields/Apttus_Config2__HasSearchAttributes__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__HasSearchAttributes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When set to true the product can be considered as base product for searching related products</description>
    <label>Has Search Attributes</label>
    <type>Checkbox</type>
</CustomField>