force-app/main/default/objects/Product2/fields/Apttus_Config2__Icon__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Icon__c</fullName>
    <description>Displays the icon uploaded using the icon button.</description>
    <formula>HYPERLINK( &quot;/apex/Apttus_Config2__IconUploader?productId=&quot;+Id, IF(ISBLANK(Apttus_Config2__IconId__c) , IMAGE(&quot;/resource/Apttus_Config2__Image_UploadIcon&quot;, &quot;Upload Icon&quot;, 50, 50), IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot;+Apttus_Config2__IconId__c , &quot;Icon&quot;, 50, 50)) , &quot;_top&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Product Icon for display in application. Click on the icon to add/change the image.</inlineHelpText>
    <label>Icon</label>
    <type>Text</type>
</CustomField>