force-app/main/default/objects/Product2/fields/Apttus_Config2__IconId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IconId__c</fullName>
    <description>The attachment object ID of the uploaded icon image file.</description>
    <label>Icon Image</label>
    <length>32</length>
    <type>Text</type>
</CustomField>