force-app/main/default/objects/Product2/fields/Apttus_Config2__IconSize__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IconSize__c</fullName>
    <description>The actual size of the icon.</description>
    <inlineHelpText>The actual size of the icon.</inlineHelpText>
    <label>Actual Icon Size</label>
    <length>32</length>
    <type>Text</type>
</CustomField>