force-app/main/default/objects/Product2/fields/Apttus_Config2__LaunchDate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__LaunchDate__c</fullName>
    <description>The date when the product is launched for selling.</description>
    <inlineHelpText>The date when the product is launched for selling.</inlineHelpText>
    <label>Launch Date</label>
    <type>Date</type>
</CustomField>