force-app/main/default/objects/Product2/fields/Apttus_Config2__RenewalLeadTime__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__RenewalLeadTime__c</fullName>
    <description>The renewal lead time in days for the installed product</description>
    <inlineHelpText>The renewal lead time in days for the installed product</inlineHelpText>
    <label>Renewal Lead Time</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>