force-app/main/default/objects/Product2/fields/Apttus_Config2__ShowTabView__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ShowTabView__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the option groups in a tab view. Top level option groups are displayed as tabs.</description>
    <inlineHelpText>Check to show tab view. Top level option groups are displayed as tabs.</inlineHelpText>
    <label>Show Tab View</label>
    <type>Checkbox</type>
</CustomField>