force-app/main/default/objects/Product2/fields/Apttus_Config2__Version__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Version__c</fullName>
    <defaultValue>1.00</defaultValue>
    <label>Version</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>